fix(home): updated spacing for some styles

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,13 +1,16 @@
 @use "./variables" as *;
 
 .home {
-  border: 5px solid color(border);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
   color: color(text-dark);
+
+  @media (max-width: breakpoint(tablet)) {
+    padding-top: spacing(xxl);
+  }
 
   h1 {
     font-size: 2.8rem;
@@ -39,5 +42,7 @@
     width: 100%;
     align-items: space-between;
     justify-content: space-evenly;
+    gap: 15px;
+    padding: 25px 0;
   }
 }
